LD tiles scrollbar fix

--- a/static/scss/courses/learner_dashboard.scss
+++ b/static/scss/courses/learner_dashboard.scss
@@ -53,7 +53,7 @@
     }
 
     .row{
-        height: 440px;
+        height: 450px;
         width: 587px;
         margin: 0px;
         overflow: auto;
